fix(style): fixed overflow and width tightenning issue

--- a/HTML_CSS/RandompasswordGenerator/style.css
+++ b/HTML_CSS/RandompasswordGenerator/style.css
@@ -14,6 +14,8 @@ body {
 
 .container {
   max-width: 600px;
+  overflow: hidden;
+  margin-inline: 10px;
   width: 100%;
   box-shadow: 1px 1px 1px 1px rgba(129, 141, 146, 0.58);
   color: white;
